--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
 
         <section class="portfolio-section">
-          <div class="portfolio-grid">
+          <div class="hero-grid">
             <div class="portfolio-item">
               <svg
                 width="131"
